Added mysql dumps for creating dbs

--- a/src/templates/checkout.html
+++ b/src/templates/checkout.html
@@ -13,6 +13,9 @@
 
  </div>
  {% endfor %}
+ <div>
+    <span>Total --- Cantidad: {{total_amount}} --- Precio total: {{total_price}}</span>
+ </div>
  
 
     
