--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -4,6 +4,6 @@
 
 {% block body %}
 <h1> Welcome {{ user.username }}</h1>
-<h1>Visitas: </h1>
+<h1>Visitas: {{user.visits }}</h1>
 <a href="/store">Ir a tienda</a>
 {% endblock %}
